--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:all && cd packages/editor-sample && npm run build",
+  "buildCommand": "npm run build:vercel",
   "installCommand": "npm install --legacy-peer-deps",
   "outputDirectory": "packages/editor-sample/dist",
   "framework": "vite"
