--- a/packages/editor-sample/package.json
+++ b/packages/editor-sample/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
+    "build:all": "cd ../.. && npm run build:all",
     "preview": "vite preview"
   },
   "dependencies": {
