--- a/packages/block-footer/tsconfig.json
+++ b/packages/block-footer/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "esnext",
+    "lib": ["ES2015", "DOM", "DOM.Iterable"],
     "jsx": "react",
     "outDir": "dist",
     "declaration": true,
