Refactor build scripts in package.json and enhance TypeScript configurations across multiple packages, adding type annotations for event handlers in components.

--- a/packages/block-order-summary/tsconfig.json
+++ b/packages/block-order-summary/tsconfig.json
@@ -3,14 +3,16 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "esnext",
+    "lib": ["ES2015", "DOM", "DOM.Iterable"],
+    "jsx": "react",
     "outDir": "dist",
-    "lib": ["ES2015", "DOM"],
-    "baseUrl": ".",
-    "paths": {
-      "react": ["../editor-sample/node_modules/@types/react"],
-      "zod": ["../editor-sample/node_modules/zod"]
-    }
+    "declaration": true,
+    "declarationMap": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": ["dist"]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
 
