--- a/packages/block-header/package.json
+++ b/packages/block-header/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.tsx --format cjs,esm --dts",
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "appscrip",
@@ -26,6 +26,7 @@
     "zod": "^1 || ^2 || ^3"
   },
   "devDependencies": {
+    "@types/react": "^18.2.55",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   }
