Refactor event handler implementations in SocialLinks component for improved readability and maintainability. Update TypeScript configuration in email-builder to include source files and exclude test files.

--- a/packages/email-builder/tsconfig.json
+++ b/packages/email-builder/tsconfig.json
@@ -29,5 +29,6 @@
       "@usewaypoint/document-core": ["../document-core/src/index.ts"]
     }
   },
-  "exclude": ["dist"]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"]
 }
