--- a/packages/block-coupon/package.json
+++ b/packages/block-coupon/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.tsx --format cjs,esm --dts",
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "carlos@usewaypoint.com",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
+    "@types/react": "^18.2.55",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   }
