--- a/packages/email-builder/tsconfig.json
+++ b/packages/email-builder/tsconfig.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "esnext",
+    "lib": ["ES2015", "DOM", "DOM.Iterable"],
+    "jsx": "react",
     "outDir": "dist",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
       "@usewaypoint/block-address": ["../block-address/src/index.tsx"],
