--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,20 @@
 {
   "buildCommand": "npm run build:all && npm run build --workspace=@usewaypoint/editor-sample",
   "outputDirectory": "packages/editor-sample/dist",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps",
+  "rewrites": [
+    {
+      "source": "/email-builder-js/assets/(.*)",
+      "destination": "/assets/$1"
+    },
+    {
+      "source": "/email-builder-js",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/email-builder-js/",
+      "destination": "/index.html"
+    }
+  ]
 }
 
